# HeteCD2GOLD

./: .gitattributes  .gitignore  README.md  compare_configs.py  configs_weight_ablation.py  predict.py  predict_tsne.py  predict_tsne_baseline.py  pyproject.toml  requirements.txt  train.py  train_single_config.py  train_weight_ablation.py
.git-crypt/keys/default/0/: 51764076019ADC1CC966B9AD28365D515DE48442.gpg
datasets/: RS_ST.py  merge_tile_for_predict.py  preprocess.py  stitch_predict_tiles.py
doc/GOLD/: GOLD_Architecture.drawio  GOLD_Architecture_Detailed.drawio  GOLD_Architecture_Professional.drawio  T8.md  cas-common.sty  cas-dc-template.abs  cas-dc-template.tex  cas-dc.cls  cas-model2-names.bst  cas-refs.bib  manifest.txt  model2-names.bst  model5-names.bst  renovate.json  translated.md
doc/GOLD/.overleaf/: settings.json
doc/GOLD/figures/: model_framework.vsdx  ~$$model_framework.~vsdx
doc/pic/: generate_diff_backgrounds.py  generate_legend.py  generate_pooling_backgrounds.py
models/: BiSRNet.py  SSCDl.py  hetecd.py  resnet.py  resnetCD.py
utils/: loss.py  misc.py  transform.py  utils.py  utils_fit.py
