[project]
name = "gold"
version = "0.1.0"
description = "Guided Online Learning for Distillation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "torchvision",
    "scikit-image",
    "tensorboardX",
    "opencv-python",
    "matplotlib",
    "timm",
    "nvitop",
    "rasterio",
    "tensorboard",
    "thop",
    "scikit-learn",
    "tsne-torch",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu128" }]
torchvision = [{ index = "pytorch-cu128" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true